libraries, review classification

--- a/cell-phones-analysis.ipynb
+++ b/cell-phones-analysis.ipynb
@@ -28,43 +28,7 @@
     "#create list with dictionaries, from which we will create dataframe\n",
     "data = []\n",
     "for e in parse(\"data\\Cell_Phones_&_Accessories.txt.gz\"):\n",
-    "  data.append(e)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 78931 entries, 0 to 78930\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   product/productId   78930 non-null  object\n",
-      " 1   product/title       78930 non-null  object\n",
-      " 2   product/price       78930 non-null  object\n",
-      " 3   review/userId       78930 non-null  object\n",
-      " 4   review/profileName  78930 non-null  object\n",
-      " 5   review/helpfulness  78930 non-null  object\n",
-      " 6   review/score        78930 non-null  object\n",
-      " 7   review/time         78930 non-null  object\n",
-      " 8   review/summary      78930 non-null  object\n",
-      " 9   review/text         78930 non-null  object\n",
-      "dtypes: object(10)\n",
-      "memory usage: 6.0+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "#read the data as pandas dataframe\n",
-    "df = pd.DataFrame(data)\n",
-    "df.info()"
+    "  data.append(e)\n"
    ]
   },
   {
@@ -73,10 +37,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#read the data as pandas dataframe\n",
+    "df = pd.DataFrame(data)\n",
     "#rename columns\n",
     "df.columns = ['productID','product','price','userID','profile','helpfulness','score','date','summary','text']\n",
-    "#Convert column types\n",
+    "\n",
+    "#Replace all unknown values with None\n",
     "df = df.replace({'unknown': None})\n",
+    "\n",
+    "#Convert column types\n",
     "df[['price','score','date']] = df[['price','score','date']].apply(pd.to_numeric)\n",
     "df['date'] = pd.to_datetime(df['date'], unit='s')\n",
     "df[['productID','product','userID','profile','helpfulness','summary','text']] = \\\n",
@@ -85,35 +54,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 78931 entries, 0 to 78930\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column       Non-Null Count  Dtype         \n",
-      "---  ------       --------------  -----         \n",
-      " 0   productID    78930 non-null  string        \n",
-      " 1   product      78930 non-null  string        \n",
-      " 2   price        35643 non-null  float64       \n",
-      " 3   userID       76654 non-null  string        \n",
-      " 4   profile      76654 non-null  string        \n",
-      " 5   helpfulness  78930 non-null  string        \n",
-      " 6   score        78930 non-null  float64       \n",
-      " 7   date         78930 non-null  datetime64[ns]\n",
-      " 8   summary      78930 non-null  string        \n",
-      " 9   text         78930 non-null  string        \n",
-      "dtypes: datetime64[ns](1), float64(2), string(7)\n",
-      "memory usage: 6.0 MB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>productID</th>\n",
+       "      <th>product</th>\n",
+       "      <th>price</th>\n",
+       "      <th>userID</th>\n",
+       "      <th>profile</th>\n",
+       "      <th>helpfulness</th>\n",
+       "      <th>score</th>\n",
+       "      <th>date</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B000JVER7W</td>\n",
+       "      <td>Mobile Action MA730 Handset Manager - Bluetoot...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A1RXYH9ROBAKEZ</td>\n",
+       "      <td>A. Igoe</td>\n",
+       "      <td>0/0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2009-01-31</td>\n",
+       "      <td>Don't buy!</td>\n",
+       "      <td>First of all, the company took my money and se...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B000JVER7W</td>\n",
+       "      <td>Mobile Action MA730 Handset Manager - Bluetoot...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A7L6E1KSJTAJ6</td>\n",
+       "      <td>Steven Martz</td>\n",
+       "      <td>0/0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2007-10-04</td>\n",
+       "      <td>Mobile Action Bluetooth Mobile Phone Tool Soft...</td>\n",
+       "      <td>Great product- tried others and this is a ten ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B000JVER7W</td>\n",
+       "      <td>Mobile Action MA730 Handset Manager - Bluetoot...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A2NOQQ7I6PU7CW</td>\n",
+       "      <td>Daniel M. Johnson \"rocknbluesharp\"</td>\n",
+       "      <td>0/0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2007-08-10</td>\n",
+       "      <td>good</td>\n",
+       "      <td>works real good....a little hard to set up...w...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B000924R5I</td>\n",
+       "      <td>USB Data Cable for Sony-Ericsson Z600, Z500, Z...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A29Q0CLOF0U8BN</td>\n",
+       "      <td>E. Owens</td>\n",
+       "      <td>4/5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2006-04-28</td>\n",
+       "      <td>No instructions included...</td>\n",
+       "      <td>The price was right for this cable ($11.95+$4....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B000924R5I</td>\n",
+       "      <td>USB Data Cable for Sony-Ericsson Z600, Z500, Z...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ANNHJND2MHUI3</td>\n",
+       "      <td>Isaac Salas \"=CRBF=gB^link\"</td>\n",
+       "      <td>0/0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2007-03-12</td>\n",
+       "      <td>NOT A DATA CABLE</td>\n",
+       "      <td>this is NOT a DATA CABLE this is only a USB ch...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    productID                                            product  price  \\\n",
+       "0  B000JVER7W  Mobile Action MA730 Handset Manager - Bluetoot...    NaN   \n",
+       "1  B000JVER7W  Mobile Action MA730 Handset Manager - Bluetoot...    NaN   \n",
+       "2  B000JVER7W  Mobile Action MA730 Handset Manager - Bluetoot...    NaN   \n",
+       "3  B000924R5I  USB Data Cable for Sony-Ericsson Z600, Z500, Z...    NaN   \n",
+       "4  B000924R5I  USB Data Cable for Sony-Ericsson Z600, Z500, Z...    NaN   \n",
+       "\n",
+       "           userID                             profile helpfulness  score  \\\n",
+       "0  A1RXYH9ROBAKEZ                             A. Igoe         0/0    1.0   \n",
+       "1   A7L6E1KSJTAJ6                        Steven Martz         0/0    5.0   \n",
+       "2  A2NOQQ7I6PU7CW  Daniel M. Johnson \"rocknbluesharp\"         0/0    4.0   \n",
+       "3  A29Q0CLOF0U8BN                            E. Owens         4/5    4.0   \n",
+       "4   ANNHJND2MHUI3         Isaac Salas \"=CRBF=gB^link\"         0/0    1.0   \n",
+       "\n",
+       "        date                                            summary  \\\n",
+       "0 2009-01-31                                         Don't buy!   \n",
+       "1 2007-10-04  Mobile Action Bluetooth Mobile Phone Tool Soft...   \n",
+       "2 2007-08-10                                               good   \n",
+       "3 2006-04-28                        No instructions included...   \n",
+       "4 2007-03-12                                   NOT A DATA CABLE   \n",
+       "\n",
+       "                                                text  \n",
+       "0  First of all, the company took my money and se...  \n",
+       "1  Great product- tried others and this is a ten ...  \n",
+       "2  works real good....a little hard to set up...w...  \n",
+       "3  The price was right for this cable ($11.95+$4....  \n",
+       "4  this is NOT a DATA CABLE this is only a USB ch...  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()\n"
+    "df.head()\n"
    ]
   }
  ],
